app/static/style.css
body, html {
	margin: 0px;
	width:100%;
	font-family: 'Roboto', sans-serif;
}

body {
	background: #61aea8;
}
b {
	font-weight:600;
}
.left {
	width: 50%;
	float: left;
	margin-top:-58px;
	margin-bottom: 64px;
	display:inline-block;
	transition: 0.3s all;

}
.full {
	margin-top:-58px;
	padding-bottom:36px;

}
.right {
	width: 50%;
	float: right;
	display:inline-block;
	margin-top:-58px;
	margin-bottom: 64px;
	transition: 0.3s all;
}

.page_container {
	width:100%;
	background-color:#ccc;
}


.page_header {
	background:#92e0d9 url("dog.jpg");
	background-attachment: fixed;
	background-position: center -100px;
	background-size: cover; 
	height:30%;
}

.page_box {
	background:#eeeeee;
	margin:16px;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.small-images img {
    max-width: 200px;
    margin:auto;
}
.fill-images img {
    max-width: 100%;
    margin:auto;
}

.big {
	margin-left: 10%;
	margin-right: 10%;
}

.page_box p {
	opacity: 0.87;
	color: rgba(0,0,0,0.87);
	font-size: 16px;
	font-weight:400;
	line-height:32px;

}
.page_box li {
	padding:16px;
	color:rgba(0,0,0,0.87);
	border-bottom: 1px solid rgba(0, 0, 0, .12);
}

.page_box ol, ul {
	list-style:none;
	padding:0px;
	margin:0px;
}

.page_box hr {
	color:#ddd;
	opacity: 0.30;
	padding:0px;
	margin:0px;
}

a {
	color: #61AEA8;
	font-weight: 400;
}
.box_header {
	background:#FFF;
	padding:8px 24px 8px 24px;
	border-bottom: 1px solid rgba(0, 0, 0, .12);
}

.box_header h3{
	color:rgb(66,66,66);
	font-size: 18px;
	font-weight: 400;
	line-height:32px;
	text-transform:none;
	display:inline-block;
}
.box_header h4{
	color:rgb(66,66,66);
	font-size:14px;
	font-weight:400;
	line-height:24px;
}

.box_content {
	padding:24px;
	transition: 0.3s all;
}
.content li a{
	padding-left:16px;
	cursor:pointer;
}
.paragraph {
	color: rgb(66,66,66) !important;
	font-size:16px;
	font-weight:400;
	line-height:25px;
	text-align:left;
	word-break: break-word;
	word-wrap: break-word;
}

.header_bar {
	background: #fff;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	z-index: 100;
	width: 100%;
	height: 56px;
	position:fixed;
	overflow: hidden;
}
.header_content {
	display:inline-block;
	float:right;
	height:100%;
	margin:0px;
	line-height:56px;
}

.header_content a {
	color: rgba(66,66,66,0.87);
	float: right;
	padding-right: 20px;
	padding-left:20px;
	font-size: 18px;
}
.header_content a:hover {
	background-color:#61aea8;
	cursor:pointer;
}

.navbar-collapse {
	position:fixed;
	background-color:#fff;
	overflow-x:hidden;
	z-index:3;
	top:40px;
	right:0;
	overflow:hidden;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.navbar-collapse a{
	padding: 8px 42px 8px 24px;
	display:block;
	color:rgba(0,0,0,0.87);
}

.navbar-collapse a{
	color:rgba(0,0,0,0.87);
	background-color:#fff;
	overflow:hidden;
	width:100%;
	list-style: none;
	border-bottom: 1px solid rgba(0,0,0,.12);
}
.navbar-collapse a:hover{
	background-color:#ddd;
}

/* For navbar hamburger ikon */
.icon-open {
	transform: rotate(90deg);
}
.icon-open {
	transform: rotate(-90deg);
}


.header_logo {
	padding-left: 20px;
	width:20%;
	height:100%;
	position:absolute;
}

#logo_img {
	height:100%;
	min-width:40%;
}

.header_content a {
	font-family: "Roboto","Helvetica","Arial",sans-serif;
	color: rgba(66,66,66,0.87);
	line-height: 56px;
	font-weight: 400;
	letter-spacing: 0.02em;
	text-decoration:none;
}

.flashed_messages {
	text-align: center;
	font-weight: normal;
	width:100%;
	position:relative;
	display:inline-block;
	z-index: 2;
	margin-top:4px;
	background:#fafafa;
	padding:8px;
	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
	transition: all 1s cubic-bezier(.25, .8, .25, 1);
}

.product_table {
	border-radius: 2px;
	margin-bottom: 50px;
	display: inline-table;
	width: 100%;
	background:#fafafa;
	border: 1px solid #ddd;
}
.product_table tr:last-child th, .product_table tr:last-child td{
	border-bottom:none;
}

.product_table label {
	font-weight: normal;
}
.product_table tr td {
	border-bottom: 1px solid rgba(0,0,0, .12);
}
.product_table tr td input {
	width:100%;
}
.product_table tr td textarea {
	width:100%;
}

.product_table tr th {
	text-align: left;
	padding: 20px;
	border:none;
	border-bottom: 1px solid rgba(0,0,0, .12);
	border-top: 1px solid rgba(0,0,0, .12);
	background:#fff;
	border-top: none;
	font-weight:normal;

}
.product_table td {
	text-align: left;
	margin: 50px;
	padding: 20px;
	border:none;
}
.product_table li {
	list-style: none;
}

.th-left-border {
	width:20%;
	border-right:1px solid #ddd !important;
}

.noselect {
	-webkit-touch-callout: none; /* iOS Safari */
	-webkit-user-select: none; /* Safari */
	-khtml-user-select: none; /* Konqueror HTML */
	-moz-user-select: none; /* Firefox */
	-ms-user-select: none; /* Internet Explorer/Edge */
	user-select: none; /* Non-prefixed version, currently
	supported by Chrome and Opera */
}


@media screen and (max-width: 840px) {
	.left {
		width: 100%;
		margin-top:-58px;
		display:block;
		margin-bottom:48px;
		transition: 0.3s all;
	}
	.right {
		width: 100%;
		float: right;
		display:block;
		margin-top:0px;
		margin-bottom:48px;
		transition: 0.3s all;
	}
	.full {
		margin-top:-58px;
		margin-bottom: 64px;
	}
	.box_content {
		transition: 0.3s all;

	}
}



.footer_content {
	margin-left: 10%;
	margin-right: 10%;
	padding-bottom:20px;
}

.footer_content h3{
	color: #fff;
	font-weight:400;
	line-height:32px;
}
.footer_content a{
	color:rgba(66,66,66,1);
	width:100%;
	height:56px;
}
.footer_content li {
	margin-bottom:10px;
}

/* Google maps widget front page */
#map {
 height:400px;
 width:100%;
}

.footer_copyright {
	background:#2f7e79;
	color:#fff;
	width:100%;
}
.footer_copyright_text {
	margin-bottom:0px;
	margin-left: 10%;
	margin-right: 10%;
	min-width: 60%;
	background:#2f7e79;
	color:#fff;
}

.flat_button {
	background-color: #fff;
	border-radius:5px;
	width:100%;
	display:inline-block;
	cursor:pointer;
	line-height: 46px;
	text-align:center;
	white-space: nowrap;
	text-transform: uppercase;
	font-weight: 500;
	font-size: 18px;
	letter-spacing: .01em;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
}
.flat_button.small {
	width:200px;
	font-size: 14px;
}
.flat_button:hover {
	background-color: #F5F5F5;
	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.16), 0 2px 2px rgba(0, 0, 0, 0.23);
}

input[type="submit"] {
	cursor: pointer;
}


/* Registrer.html styling */
.registreringsskjema{
	margin-left: 25%;
	margin-right: 25%;
}

@media screen and (max-width: 750px) {
	.registreringsskjema{
		left: 25%;
		right: 25%;
		margin-left: auto;
		margin-right: auto;
	}
}

/* Dynamic hamburger menu */
@media screen and (max-width: 920px) {
	.header_content a:not(:first-child) {
		display: none;
	}
	.header_content a.icon {
		float:right;
		padding-right: 20px;
		padding-left: 20px;
		display: inline-block !important;
	}
}

@media screen and (max-width: 600px) {
	.header_content.responsive {
		position: relative;
	}

	.header_content.responsive li.a.icon {
		position: absolute;
		right: 0;
		top: 0;
	}
}
@media screen and (min-width: 920px) {
	.navbar-collapse {
		display: none;
	}
}

.header_content a.icon {
	display: none;
	cursor:pointer;
	transition: color 0.3s ease, background-color 0.3s ease, transform 0.4s ease;
}

.navbar-hide {
	display:none;
}

#categories{
    text-align: center;
}

.row {
	width:100%;
}

.col {
    display: inline-block;
}

.three .col{
	vertical-align:top;
	width:32%;
}
.two .col {
	vertical-align:top;
	width:49%;
}

@media screen and (max-width: 920px) {
	.three .col{
		width:100%;
		min-width:100%; 
	}
	.two .col {
		width:100%;
		min-width:100%; 
	}
}

.center {
	text-align:center;
}

.no-padding {
	padding:0px;
}

.knowledge-menu {
	vertical-align:top;
	width:29%;
	border-right: 1px solid rgba(0, 0, 0, .12);
	height:100%;

}
.knowledge-content {
	vertical-align:top;
	width:69%;

}

